data/all_generated_tests/raw_wast_tests/block_MismanagementofBlockNesting_2248.wast
;; 9. **Test Case: Mismatched Nesting Labels**    - **Test Description**: Intentionally mismatch `block` and `end` pairs signifying improper nesting, then analyze if `br` instructions get incorrectly resolved due to these mismatches.    - **Constraint**: Ensures that the implementation catches nesting issues and does not misresolve `br` targets leading to incorrect code execution.    - **Relation to Mismanagement**: Mismanagement would manifest as actual jumping even in incorrectly nested code, a significant control flow fault.

(assert_invalid
  (module (func $mismatched-nesting-labels
    (block (block (br 1)) (end)) (end)
  ))
  "type mismatch"
)